implement get all messages
