# src/controllers/messages/validation.go
@@ -1,0 +1,10 @@
+package messages
+
+import (
+	"core/validation"
+	"core/validation/types"
+)
+
+var checkGetMessagesParams = validation.MustBe{
+	"ChannelID": types.Number{Min: 1},
+}
